--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
             <!-- <div class="row"> -->
               <!-- <div class="kol"> -->
                 <button class="btn">
-                  <a target="_blank" href="https://linktr.ee/wadaimanis">
+                  <a target="_blank" href="https://docs.google.com/spreadsheets/d/1DlxQM-1OiTZj6wr73zMjYFya47FMdyvmUSXeOkyjYDk/edit?usp=sharing">
                       Laporan Capaian Kinerja 2025
                   </a>
                 </button>
                 <button class="btn">
-                  <a target="_blank" href="https://bit.ly/Pascalelang">
+                  <a target="_blank" href="https://docs.google.com/spreadsheets/d/1ml-zMsKRJFnQx9t9NeenN0BY47vuHT0TIJDplEK0XvY/edit?usp=sharing">
                     Penjelasan IKU
                   </a>
                 </button>
@@ -97,12 +97,12 @@
             <!-- <div class="row"> -->
               <!-- <div class="kol"> -->
                 <button class="btn">
-                  <a target="_blank" href="https://linktr.ee/layananpenilaian">
+                  <a target="_blank" href="https://docs.google.com/spreadsheets/d/1Zd1KTiZnetit0d7s4aHw_meVML03137yXWkoiv0fzlQ/edit?usp=sharing">
                     Dashboard Risiko 2025
                   </a>
                 </button>
                 <button class="btn">
-                  <a target="_blank" href="https://bit.ly/piutangnegarakpknlbjm">
+                  <a target="_blank" href="https://kemenkeu.sharepoint.com/:x:/s/ForumPengelolaanKinerjadanRisikoDJKN/EeR-2bvFESFPiDz9xLHAsqkBMnUTXlF71g4Sd3IKa0dDMw?e=hspMdc">
                     Target IKU 2025
                   </a>
                 </button>
@@ -111,12 +111,12 @@
             <!-- <div class="row"> -->
               <!-- <div class="kol"> -->
                 <button class="btn">
-                  <a target="_blank" href="https://wa.me/628115167200">
+                  <a target="_blank" href="https://docs.google.com/spreadsheets/d/1cDfQkSAcXYmP-vNNpBeg4IPXhGXf5Xfz20h8DC9S-sY/edit?gid=1112914358#gid=1112914358">
                     Manual IKU 2025
                   </a>
                 </button>
                 <button class="btn">
-                  <a target="_blank" href="https://wa.me/628115167100">
+                  <a target="_blank" href="https://docs.google.com/spreadsheets/d/1cDfQkSAcXYmP-vNNpBeg4IPXhGXf5Xfz20h8DC9S-sY/edit?gid=1112914358#gid=1112914358">
                     Pelaksanaan Pengendalian Gratifikasi
                   </a>
                 </button>
