manual IKU change

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <!-- <div class="row"> -->
               <!-- <div class="kol"> -->
                 <button class="btn">
-                  <a target="_blank" href="https://docs.google.com/spreadsheets/d/1cDfQkSAcXYmP-vNNpBeg4IPXhGXf5Xfz20h8DC9S-sY/edit?gid=1112914358#gid=1112914358">
+                  <a target="_blank" href="https://docs.google.com/spreadsheets/d/1s_koZNJs522oeRs2HpNpTeMnkI7kixhk6KN_REL7bEg/edit?usp=sharing">
                     Manual IKU 2025
                   </a>
                 </button>
