--- a/index.html
+++ b/index.html
@@ -88,8 +88,18 @@
                   </a>
                 </button>
                 <button class="btn">
+                  <a target="_blank" href="https://docs.google.com/spreadsheets/d/1s_koZNJs522oeRs2HpNpTeMnkI7kixhk6KN_REL7bEg/edit?usp=sharing">
+                    Manual IKU 2025
+                  </a>
+                </button>
+                <button class="btn">
+                  <a target="_blank" href="https://kemenkeu.sharepoint.com/:x:/s/ForumPengelolaanKinerjadanRisikoDJKN/EeR-2bvFESFPiDz9xLHAsqkBMnUTXlF71g4Sd3IKa0dDMw?e=hspMdc">
+                    Target IKU 2025
+                  </a>
+                </button>
+                <button class="btn">
                   <a target="_blank" href="https://docs.google.com/spreadsheets/d/1ml-zMsKRJFnQx9t9NeenN0BY47vuHT0TIJDplEK0XvY/edit?usp=sharing">
-                    Penjelasan IKU
+                    Action Plan
                   </a>
                 </button>
               <!-- </div> -->
@@ -101,20 +111,11 @@
                     Dashboard Risiko 2025
                   </a>
                 </button>
-                <button class="btn">
-                  <a target="_blank" href="https://kemenkeu.sharepoint.com/:x:/s/ForumPengelolaanKinerjadanRisikoDJKN/EeR-2bvFESFPiDz9xLHAsqkBMnUTXlF71g4Sd3IKa0dDMw?e=hspMdc">
-                    Target IKU 2025
-                  </a>
-                </button>
+
               <!-- </div> -->
             <!-- </div> -->
             <!-- <div class="row"> -->
               <!-- <div class="kol"> -->
-                <button class="btn">
-                  <a target="_blank" href="https://docs.google.com/spreadsheets/d/1s_koZNJs522oeRs2HpNpTeMnkI7kixhk6KN_REL7bEg/edit?usp=sharing">
-                    Manual IKU 2025
-                  </a>
-                </button>
                 <button class="btn">
                   <a target="_blank" href="https://docs.google.com/spreadsheets/d/1cDfQkSAcXYmP-vNNpBeg4IPXhGXf5Xfz20h8DC9S-sY/edit?gid=1112914358#gid=1112914358">
                     Pelaksanaan Pengendalian Gratifikasi
@@ -154,7 +155,7 @@
       <!-- footer -->
       <div class="footer animate__animated animate__bounceInUp
         animate__delay-2s">
-        <i>Innovatif, Kompeten, Akuntabel, dan Agile</i>
+        <i style="color: white;">Innovatif, Kompeten, Akuntabel, dan Agile</i>
       </div>
   
     <!-- </div>   -->
