--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <ul class="thumb">
           <li><img src="thumb1.png" onclick="imgSlider('img1.png')" ></li>
           <li><img src="thumb2.png" onclick="imgSlider('img2.png')"></li>
-          <li><img src="wbbm.png" onclick="imgSlider('img3.png')" ></li>
+          <li><img src="thumb3.png" onclick="imgSlider('img3.png')" ></li>
          </ul>
        </div>
        
