--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       />
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Kanwil DJKN Papabaruku</title>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
      
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
@@ -87,8 +88,8 @@
                       Kertas Kerja NKO 2025 Kanwil
                   </a>
                 </button>
-                <button class="btn">
-                  <a target="_blank" href="https://docs.google.com/spreadsheets/d/1DlxQM-1OiTZj6wr73zMjYFya47FMdyvmUSXeOkyjYDk/edit?usp=sharing">
+                <button class="btn" id="nonaktif">
+                  <a target="_blank" href="https://kikanwildjknpapabaruku.github.io/torangpatuhv2/">
                       Laporan Capaian Kinerja 2025
                   </a>
                 </button>
@@ -175,6 +176,19 @@
     function imgSlider(anything){
       document.querySelector('.abc').src = anything;
     }
+  </script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      document.getElementById("nonaktif").addEventListener("click", function (event) {
+        event.preventDefault(); // Mencegah navigasi langsung
+        Swal.fire({
+          title: "Peringatan!",
+          text: "Menu ini sekarang telah dinonaktifkan \n Silahkan gunakan menu Kertas Kerja NKO 2025 Kanwil",
+          icon: "warning",
+          confirmButtonText: "Mengerti"
+        });
+      });
+    });
   </script>
   </body>
 </html>
