--- a/index.html
+++ b/index.html
@@ -84,17 +84,17 @@
             <!-- <div class="row"> -->
               <!-- <div class="kol"> -->
                 <button class="btn">
-                  <a target="_blank" href="https://kemenkeu.sharepoint.com/:x:/r/sites/PKRPapabaruku/Shared%20Documents/General/Kinerja%202025/01%20Kertas%20Kerja%20NKO/Kertas%20Kerja%20NKO%20Kanwil%20DJKN%20Papabaruku%20Periode%20Tahun%202025.xlsx?d=w152ff9b0b97149b59a38069539202d5c&csf=1&web=1&e=p1NfA7">
-                      Kertas Kerja NKO 2025 Kanwil
+                  <a target="_blank" href="https://kemenkeu.sharepoint.com/:f:/s/PKRPapabaruku/Eo3AO533ce9DuqtW5NkV3fQB6iF8QBxJ7drL3xgGs5vsMA?e=9GGeex">
+                      Kertas Kerja NKO 2025 Kanwil & KPKNL
                   </a>
                 </button>
                 <button class="btn" id="nonaktif">
                   <a target="_blank" href="https://kikanwildjknpapabaruku.github.io/torangpatuhv2/">
-                      Laporan Capaian Kinerja 2025
+                      Matriks Cascading
                   </a>
                 </button>
                 <button class="btn">
-                  <a target="_blank" href="https://docs.google.com/spreadsheets/d/1s_koZNJs522oeRs2HpNpTeMnkI7kixhk6KN_REL7bEg/edit?usp=sharing">
+                  <a target="_blank" href="https://kemenkeu.sharepoint.com/:x:/s/PKRPapabaruku/EbvXD9e1NRVKp1QaOReaSQwBRUyFz3erTJgSbgyy1k6C8g?e=o8d0Ml">
                     Manual IKU 2025
                   </a>
                 </button>
@@ -183,7 +183,7 @@
         event.preventDefault(); // Mencegah navigasi langsung
         Swal.fire({
           title: "Peringatan!",
-          text: "Menu ini sekarang telah dinonaktifkan \n Silahkan gunakan menu Kertas Kerja NKO 2025 Kanwil",
+          text: "Sedang dalam proses pengerjaan oleh Seksi Kepatuhan Internal",
           icon: "warning",
           confirmButtonText: "Mengerti"
         });
